Removed annoying Ai Thinking window popping up